--- a/BuildScript/SP_Auto.properties
+++ b/BuildScript/SP_Auto.properties
@@ -7,6 +7,6 @@ TestVM.SuiteInstaller.dir	= C:\\Installer
 TestVM.AntUtilities.dir = C:\\sp_workspace\\TestComplete\\BuildScript
 TestVM.TCScripts.dir 	= C:\\sp_workspace\\TestComplete\\TC Script\\SpaceManager\\SP_8.2
 EnvComponents.dir 		= Z:\\Components
-OracleClient.dir		= {EnvComponents.dir}\\OracleClient
+OracleClient.dir		= ${EnvComponents.dir}\\OracleClient
 OracleResponseFile		= 112040_32bit_client.rsp
 Office.dir				= Office.2010
