Update Properties file

--- a/BuildScript/SP_Auto.properties
+++ b/BuildScript/SP_Auto.properties
@@ -4,8 +4,8 @@ TestVM.SuiteInstaller.dir	= C:\\Installer
 
 
 #-----------------------Components setting---------------------------
-TestVM.AntUtilities.dir = C:\\sp_workspace\\TestComplete\\BuildScript
-TestVM.TCScripts.dir 	= C:\\sp_workspace\\TestComplete\\TC Script\\SpaceManager\\SP_8.2
+TestVM.AntUtilities.dir = C:\\sm_workspace\\TestComplete\\BuildScript
+TestVM.TCScripts.dir 	= C:\\sm_workspace\\TestComplete\\TC Script\\SpaceManager\\SP_8.2
 EnvComponents.dir 		= Z:\\Components
 OracleClient.dir		= ${EnvComponents.dir}\\OracleClient
 OracleResponseFile		= 112040_32bit_client.rsp
